--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
+    "mongodb": "^5.1.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
